# dosdl2cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
docs/: CMakeLists.txt
examples/: CMakeLists.txt
examples/001-hello_sdl/: CMakeLists.txt
examples/001-hello_sdl/src/: main.cpp
include/dosdl2cpp/: error.hpp  pch.hpp
